# quicktions

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  dedup_wheels.py  gen_todecimal.py  pyproject.toml  requirements-appveyor.txt  requirements.txt  setup.py  test_fractions.py  test_fractions_py2.py  test_quicktions.py  tox.ini
.github/workflows/: ci.yml  wheels.yml
benchmark/: microbench.py  telco_fractions.py
quicktions/: __init__.py  quicktions.pyx  test_fractions.py
src/: quicktions.pxd  quicktions.pyx  test_fractions.py  todecimal.h  todigit.h
src/quicktions/: __init__.pxd  __init__.py  quicktions.pxd  quicktions.pyx
